--- a/style.css
+++ b/style.css
@@ -152,6 +152,10 @@ h4 {
   display: flex;
   justify-content: space-between;
 }
+.admin p,
+.user p {
+  margin-bottom: 7px;
+}
 .my-container ul li,
 .listProducts {
   margin: 0 0.2rem;
